fix: changed margin:2.5px to margin-right and margin-botton: 5px to have the gallery/thumbs left-aligned with the text

--- a/css/extra.css
+++ b/css/extra.css
@@ -130,7 +130,8 @@ p.post-teaser a.readmore img:hover{
 	position: relative;
 	display: block;
 	height: 150px;
-	margin: 2.5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
 	flex-grow: 1;
 
 	overflow: hidden;
